Bug 296796 - Crash editing proxy.pac
Summary: Crash editing proxy.pac
Status: RESOLVED FIXED
Alias: None
Product: kio
Classification: Unmaintained
Component: http (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR crash
Target Milestone: ---
Assignee: kdelibs bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-03-26 07:18 UTC by Volker Kuhlmann
Modified: 2012-04-16 20:47 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Volker Kuhlmann 2012-03-26 07:18:09 UTC
Application: kded4 ($Id$)
KDE Platform Version: 4.7.2 (4.7.2) "release 5"
Qt Version: 4.7.4
Operating System: Linux 3.1.9-1.4-desktop x86_64
Distribution: "openSUSE 12.1 (x86_64)"

-- Information about the crash:
- What I was doing when the application crashed:

Saving proxy.pac after making changes to it. proxy.pac configured as network proxy.

-- Backtrace:
Application: KDE Dæmon (kdeinit4), signal: Segmentation fault
[Current thread is 1 (Thread 0x2b6e69ec9480 (LWP 23797))]

Thread 5 (Thread 0x2b6e804de700 (LWP 23804)):
#0  0x00002b6e681fdf21 in g_main_context_query () from /usr/lib64/libglib-2.0.so.0
#1  0x00002b6e681fe99a in ?? () from /usr/lib64/libglib-2.0.so.0
#2  0x00002b6e681ff2c2 in g_main_loop_run () from /usr/lib64/libglib-2.0.so.0
#3  0x00002b6e7fc27946 in ?? () from /usr/lib64/libgio-2.0.so.0
#4  0x00002b6e68223db6 in ?? () from /usr/lib64/libglib-2.0.so.0
#5  0x00002b6e7269c2da in ?? () from /usr/X11R6/lib64/libGL.so.1
#6  0x00002b6e63179f05 in start_thread () from /lib64/libpthread.so.0
#7  0x00002b6e6441510d in clone () from /lib64/libc.so.6

Thread 4 (Thread 0x2b6e808f6700 (LWP 23805)):
#0  0x00002b6e6440bff3 in poll () from /lib64/libc.so.6
#1  0x00002b6e681fea98 in ?? () from /usr/lib64/libglib-2.0.so.0
#2  0x00002b6e681fef59 in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#3  0x00002b6e62e6a586 in QEventDispatcherGlib::processEvents (this=0x2b6e880008e0, flags=<optimized out>) at kernel/qeventdispatcher_glib.cpp:424
#4  0x00002b6e62e3ea32 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#5  0x00002b6e62e3ec2f in QEventLoop::exec (this=0x2b6e808f5d30, flags=...) at kernel/qeventloop.cpp:201
#6  0x00002b6e62d565df in QThread::exec (this=<optimized out>) at thread/qthread.cpp:498
#7  0x00002b6e62e21aff in QInotifyFileSystemWatcherEngine::run (this=0x94acf0) at io/qfilesystemwatcher_inotify.cpp:248
#8  0x00002b6e62d59025 in QThreadPrivate::start (arg=0x94acf0) at thread/qthread_unix.cpp:331
#9  0x00002b6e7269c2da in ?? () from /usr/X11R6/lib64/libGL.so.1
#10 0x00002b6e63179f05 in start_thread () from /lib64/libpthread.so.0
#11 0x00002b6e6441510d in clone () from /lib64/libc.so.6

Thread 3 (Thread 0x2b6e92cbf700 (LWP 24261)):
#0  0x00002b6e6317de6c in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00002b6e6ec47852 in QTWTF::TCMalloc_PageHeap::scavengerThread (this=0x2b6e6ef3fe80) at ../3rdparty/javascriptcore/JavaScriptCore/wtf/FastMalloc.cpp:2359
#2  0x00002b6e6ec47889 in QTWTF::TCMalloc_PageHeap::runScavengerThread (context=<optimized out>) at ../3rdparty/javascriptcore/JavaScriptCore/wtf/FastMalloc.cpp:1464
#3  0x00002b6e7269c2da in ?? () from /usr/X11R6/lib64/libGL.so.1
#4  0x00002b6e63179f05 in start_thread () from /lib64/libpthread.so.0
#5  0x00002b6e6441510d in clone () from /lib64/libc.so.6

Thread 2 (Thread 0x2b6e80f20700 (LWP 4910)):
#0  0x00002b6e6440bff3 in poll () from /lib64/libc.so.6
#1  0x00002b6e681fea98 in ?? () from /usr/lib64/libglib-2.0.so.0
#2  0x00002b6e681fef59 in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#3  0x00002b6e62e6a586 in QEventDispatcherGlib::processEvents (this=0x2b6e94001aa0, flags=<optimized out>) at kernel/qeventdispatcher_glib.cpp:424
#4  0x00002b6e62e3ea32 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#5  0x00002b6e62e3ec2f in QEventLoop::exec (this=0x2b6e80f1fd30, flags=...) at kernel/qeventloop.cpp:201
#6  0x00002b6e62d565df in QThread::exec (this=<optimized out>) at thread/qthread.cpp:498
#7  0x00002b6e62e21aff in QInotifyFileSystemWatcherEngine::run (this=0xa3d930) at io/qfilesystemwatcher_inotify.cpp:248
#8  0x00002b6e62d59025 in QThreadPrivate::start (arg=0xa3d930) at thread/qthread_unix.cpp:331
#9  0x00002b6e7269c2da in ?? () from /usr/X11R6/lib64/libGL.so.1
#10 0x00002b6e63179f05 in start_thread () from /lib64/libpthread.so.0
#11 0x00002b6e6441510d in clone () from /lib64/libc.so.6

Thread 1 (Thread 0x2b6e69ec9480 (LWP 23797)):
[KCrash Handler]
#6  QByteArray::resize (this=0x10, size=0) at tools/qbytearray.cpp:1374
#7  0x00002b6e80b193a7 in KPAC::Downloader::download (this=0x0, url=...) at /usr/src/debug/kdelibs-4.7.2/kio/misc/kpac/downloader.cpp:41
#8  0x00002b6e80b0dced in KPAC::ProxyScout::proxyScriptFileChanged (this=0x802580, path=...) at /usr/src/debug/kdelibs-4.7.2/kio/misc/kpac/proxyscout.cpp:276
#9  0x00002b6e80b0fe4d in KPAC::ProxyScout::qt_metacall (this=0x802580, _c=QMetaObject::InvokeMetaMethod, _id=6, _a=0x7fff157fa5f0) at /usr/src/debug/kdelibs-4.7.2/build/kio/misc/kpac/proxyscout.moc:96
#10 0x00002b6e62e525aa in QMetaObject::activate (sender=0xa84270, m=<optimized out>, local_signal_index=<optimized out>, argv=0x7fff157fa5f0) at kernel/qobject.cpp:3287
#11 0x00002b6e62e15b02 in QFileSystemWatcher::fileChanged (this=<optimized out>, _t1=<optimized out>) at .moc/release-shared/moc_qfilesystemwatcher.cpp:95
#12 0x00002b6e62e15ea9 in QFileSystemWatcher::qt_metacall (this=0xa84270, _c=QMetaObject::InvokeMetaMethod, _id=<optimized out>, _a=0x2b6e94001f30) at .moc/release-shared/moc_qfilesystemwatcher.cpp:82
#13 0x00002b6e62e5615a in QObject::event (this=0xa84270, e=<optimized out>) at kernel/qobject.cpp:1226
#14 0x00002b6e6355fc34 in notify_helper (e=0x2b6e94001130, receiver=0xa84270, this=0x6d0b50) at kernel/qapplication.cpp:4481
#15 QApplicationPrivate::notify_helper (this=0x6d0b50, receiver=0xa84270, e=0x2b6e94001130) at kernel/qapplication.cpp:4453
#16 0x00002b6e63564ac1 in QApplication::notify (this=0x7fff157fafc0, receiver=0xa84270, e=0x2b6e94001130) at kernel/qapplication.cpp:4360
#17 0x00002b6e6208ee76 in KApplication::notify(QObject*, QEvent*) () from /usr/lib64/libkdeui.so.5
#18 0x00002b6e62e3f82c in QCoreApplication::notifyInternal (this=0x7fff157fafc0, receiver=0xa84270, event=0x2b6e94001130) at kernel/qcoreapplication.cpp:787
#19 0x00002b6e62e42c08 in sendEvent (event=0x2b6e94001130, receiver=0xa84270) at kernel/qcoreapplication.h:215
#20 QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x613110) at kernel/qcoreapplication.cpp:1428
#21 0x00002b6e62e6a0c3 in sendPostedEvents () at kernel/qcoreapplication.h:220
#22 postEventSourceDispatch (s=<optimized out>) at kernel/qeventdispatcher_glib.cpp:277
#23 0x00002b6e681fe58d in g_main_context_dispatch () from /usr/lib64/libglib-2.0.so.0
#24 0x00002b6e681fed88 in ?? () from /usr/lib64/libglib-2.0.so.0
#25 0x00002b6e681fef59 in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#26 0x00002b6e62e6a51f in QEventDispatcherGlib::processEvents (this=0x612c50, flags=<optimized out>) at kernel/qeventdispatcher_glib.cpp:422
#27 0x00002b6e63602f9e in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=<optimized out>) at kernel/qguieventdispatcher_glib.cpp:204
#28 0x00002b6e62e3ea32 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#29 0x00002b6e62e3ec2f in QEventLoop::exec (this=0x7fff157faf50, flags=...) at kernel/qeventloop.cpp:201
#30 0x00002b6e62e42df7 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1064
#31 0x00002b6e768b53c5 in kdemain (argc=1, argv=0x6a3300) at /usr/src/debug/kdelibs-4.7.2/kded/kded.cpp:924
#32 0x0000000000408897 in launch (argc=1, _name=0x40b3b3 "kded4", args=<optimized out>, cwd=0x0, envc=<optimized out>, envs=<optimized out>, reset_env=false, tty=0x0, avoid_loops=false, startup_id_str=0x40b22e "0") at /usr/src/debug/kdelibs-4.7.2/kinit/kinit.cpp:734
#33 0x0000000000405ec9 in main (argc=4, argv=0x7fff00000001, envp=0x7fff157fc080) at /usr/src/debug/kdelibs-4.7.2/kinit/kinit.cpp:1849

Reported using DrKonqi
Comment 1 Dawit Alemayehu 2012-03-26 18:44:24 UTC
Git commit 30483b2f87f7e824acda2425e3409e4cd39a5782 by Dawit Alemayehu.
Committed on 26/03/2012 at 19:13.
Pushed by adawit into branch 'KDE/4.8'.

Do not delete the download object once the PAC file has been downloaded.
It will be deleted when the proxy scout instance is deleted or reset.
FIXED-IN:4.8.2

M  +24   -10   kio/misc/kpac/proxyscout.cpp

http://commits.kde.org/kdelibs/30483b2f87f7e824acda2425e3409e4cd39a5782
Comment 2 Volker Kuhlmann 2012-03-27 07:20:19 UTC
Wow - 11:26h for a fix. I'm impressed! Thanks muchly.
Comment 3 Ivan Čukić 2012-04-16 20:47:46 UTC
Git commit e36a1cd3850cea7bbfd387b5861aefa8eb5110d1 by Ivan Čukić, on behalf of Dawit Alemayehu.
Committed on 26/03/2012 at 19:13.
Pushed by ivan into branch 'ivan/solid-fuse-access'.

Do not delete the download object once the PAC file has been downloaded.
It will be deleted when the proxy scout instance is deleted or reset.
FIXED-IN:4.8.2

M  +24   -10   kio/misc/kpac/proxyscout.cpp

http://commits.kde.org/kdelibs/e36a1cd3850cea7bbfd387b5861aefa8eb5110d1