Do not delete the download object once the PAC file has been downloaded. It will be deleted when the proxy scout instance is deleted or reset.

BUG:296796
FIXED-IN:4.8.2